# CarUiFlutterPi

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  DebianPackages.txt  README.md  TODO.md  build.sh  logger.sh
cmake/: GPRCCommon.cmake  TargetProtoBuf.cmake
resources/otherSource/: mbTilesVetor.txt
resources/tilemaker/: config.json  style.json
src/SimBackend/: CMakeLists.txt  coldcode.txt  main.cpp
src/SimBackend/Controller/: SocketController.cpp  SocketController.hpp  gRPCController.cpp  gRPCController.hpp
src/car_ui/: pubspec.yaml
src/car_ui/android/app/: build.gradle
src/car_ui/android/app/src/main/: AndroidManifest.xml
src/car_ui/android/app/src/main/kotlin/com/example/car_ui/: MainActivity.kt
src/car_ui/ios/Runner/: Info.plist
src/car_ui/ios/Runner.xcodeproj/: project.pbxproj
src/car_ui/lib/: main.dart
src/car_ui/lib/services/: backendconnector.dart  carpcconnector.dart  generated_carpcconnector.dart  greeterservicehandler.dart  helloworld.pb.dart  helloworld.pbgrpc.dart  helloworld.pbjson.dart
src/car_ui/lib/shared/: app_config.dart  local_style_reader.dart.old
src/car_ui/lib/ui/: mb_tiles_page.dart  mid_circle_radial_gauge.dart  overlay_window_example.dart  overlay_window_mne.dart  page_view_example.dart
src/car_ui/linux/: CMakeLists.txt  my_application.cc
src/car_ui/macos/Flutter/: GeneratedPluginRegistrant.swift
src/car_ui/macos/Runner.xcodeproj/: project.pbxproj
src/car_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
src/car_ui/macos/Runner/Configs/: AppInfo.xcconfig
src/car_ui/src/include/: carpcconnector.h
src/car_ui/test/: widget_test.dart
src/car_ui/web/: index.html  manifest.json
src/car_ui/windows/: CMakeLists.txt
src/car_ui/windows/runner/: Runner.rc  main.cpp
src/common/easylogging/: easylogging++.cc
src/protos/: carconnect.proto
